--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,20 +1,107 @@
 # Reproducible Research: Peer Assessment 1
 
-
 ## Loading and preprocessing the data
+```{r setoptions, echo=TRUE}
+library(knitr)
+library(ggplot2)
+library(sqldf)
 
 
 
-## What is mean total number of steps taken per day?
+#Assume the activity.csv was placed at the same directory as this Rmarkdown file.  
+monitoringData<- read.csv("repdata-data-activity\\activity.csv")
+cleanedData <- sqldf("Select * from monitoringData where steps is not null")
+```
 
+## Create histogram of the total number of steps taken each day
 
+```{r echo=TRUE}
 
+#plot graph
+histData<-sqldf("Select date,sum(steps) steps from cleanedData group by date")
+qplot(date,steps,data=histData,geom="histogram") + xlab("Date(s)") + ylab("Total Steps") + ggtitle("Total number of steps taken each day")
+
+#calculate the mean and median total number of steps taken per day
+meanStep = mean(histData$steps)
+medianStep = median(histData$steps)
+
+#The __mean__ total number of steps taken per day: _`r meanStep`_
+#The __median__ total number of steps taken per day: _`r medianStep`_
+```
 ## What is the average daily activity pattern?
+
+```{r echo=TRUE}
+## create time series plot of the 5-minute interval and
+##  the average number of steps taken
+
+#calculate the average of steps w.r.t. the time interval
+timeSeries<-aggregate(steps ~ interval, cleanedData, mean)
+
+#Plot time series graph
+qplot(interval, steps, data=timeSeries, geom = "line") + xlab("5 minute interval") + ylab("Avg Steps") + ggtitle("Average number of steps across all days")
+
+#check which 5-minute interval contains the maximum number of steps
+
+stepsIntervals <- sqldf("Select interval,max(steps) as steps from timeSeries")
+maxInterval<-stepsIntervals[['interval']]
+maxAvgStep<-stepsIntervals[['steps']]
+
+```
+* On average across all the days in the dataset, __`r maxInterval`__ 5-minute interval contains maximum number of steps (__`r maxAvgStep`__ steps)
 
 
 
 ## Imputing missing values
+``` {r part4_0}
+#calulate the total number of missing values in the dataset
+totalNARows<-sqldf("Select count(*) from monitoringData where steps is null")
+```
+* The total number of missing values in the dataset: __`r totalNARows`__
+
+``` {r part4}
+
+#filling all of the missing values in the dataset  
+# STRATEGY: using mean of 5 minute interval
+
+#get the NA rows
+naSteps <- which(is.na(monitoringData$steps))
+naInterval <- monitoringData[naSteps, 3] #get the corrosponding intervale
+fillSteps <- sapply(naInterval, function(x) { timeSeries[(timeSeries$interval==x), 2]})
+
+#create a new dataset that is equal to the orginal dataset
+# BUT with the missing data filled in 
+monitoringDataNew <- monitoringData
+monitoringDataNew[naSteps, 'steps'] = fillSteps #fill in missing data
+
+#again, calculate the average of steps w.r.t. the time interval
+sumStepNew <- aggregate(steps~date, monitoringDataNew, sum)
+#plot graph
+qplot(date,steps,data=sumStepNew,geom="histogram") + xlab("Date(s)") + ylab("Steps") + ggtitle("Total number of steps taken each day \n (new dataset filled missing data)")
 
 
+#calculate the mean and median total number of steps taken per day
+meanStepNew <- mean(sumStepNew$steps)
+medianStepNew <- median(sumStepNew$steps)
+```
+
+### After filling the missing values
+* The __mean__ total number of steps taken per day: _`r meanStepNew`_
+* The __median__ total number of steps taken per day: _`r medianStepNew`_
+
+The mean number of steps taken per day are the same (`r meanStepNew`). 
+But, the median number of steps taken per day are slightly different (before filling missing data: `r medianStep`, after filling missing data: `r medianStepNew`). It is probably due to filling missing values by the mean of 5 minute interval.
 
 ## Are there differences in activity patterns between weekdays and weekends?
+```{r part5}
+#create a new factor variable "dateIs" with two levels "Weekday" and "weekend"
+monitoringDataNew$date =as.Date(as.character(monitoringDataNew$date), "%Y-%m-%d")
+monitoringDataNew['dateIs'] = factor(sapply(monitoringDataNew$date, function(x){ if (weekdays(x) == "Sunday" | weekdays(x) == "Saturday") { "weekend" } else { "weekday"} }))
+
+#calculate the average of steps w.r.t. the time interval and dateIs
+avgStepDateIs = aggregate(steps~interval + dateIs, mean, data=monitoringDataNew)
+
+library(lattice)
+xyplot( steps ~ interval | dateIs, data = avgStepDateIs, type="l", layout=c(1,2), xlab="Interval", ylab="Number of steps")
+
+```
+
